--- a/PrabhaRaja/angular.json
+++ b/PrabhaRaja/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/ngx-sharebuttons/themes/default/default-theme.scss",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
